--- a/style.css
+++ b/style.css
@@ -107,8 +107,7 @@ margin-top: 5px;
  font-family: 'Raleway', sans-serif;
  width: 100%;
 }
-
-*/ #links { */
+ #links { 
 	color: white;
 	font-size: 1rem;
 	font-weight: 600;
